<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gavin.module2.bluetooth_activity"
    android:orientation="vertical">



    <TextView
        android:text="@string/bluetooth_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <TextView
        android:text="@string/touch_to_pair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">


            <TextView
                android:text="@string/paired_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listView1"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <TextView
                android:text="@string/discovered_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listView2"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:text="@string/cur_connected_device"
            android:layout_width="match_parent"
            android:id="@+id/textView5"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="18sp"
            android:textAlignment="textEnd"/>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/textView6"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/unpaired"
            android:textSize="18sp"
            android:textAlignment="textEnd"/>
    </LinearLayout>

</LinearLayout>
